src/snapshots/ck__ui_tests__help.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  Sites                                                                                 23 sites
                         Keys                       images: off · esc close
    ◉  Watched
    ◷  History           Everywhere
       4chan               j k g G ^d ^u      move, top/bottom, page
       lainchan            enter l / esc h    open / back
       wizchan             /                  filter (thread: search)
       uboachan            r / o              reload / open in browser
       endchan             :                  go to a URL or site/board
       kohlchan            ,                  settings: theme, keys, …
       desuarchive         tab / ctrl-w       next tab / close tab
       zzzchan             q, ctrl-c          quit (mouse works too)
       2ch
       smuglo.li         Home screen
       kissu               1-9 / *            open / favorite a board
       tvch                x                  unfavorite, hide a site
       sushigirl
       leftypol          Watched, History
       8kun                x                  remove the entry
       alogs               T / F              new tab / follow general
       trashchan           y / Y              copy subject+link / link
       ptchan
       erischan          Image viewer
       junkuchan           h / l, ← / →       previous / next file
       nukechan            space              pause an animated GIF
       palanq              i                  open externally
       b4k                 y / Y              copy file URL / post link
                           R                  reverse image search

 enter open   / filter   o browser   r reload   , settings   ? help
