src/snapshots/ck__ui_tests__history.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  History                                                                              2 threads

  ▌ 4chan      /g/       Snapshot thread                                                   2m ago
    4chan      /b/       Random thread                                                     1d ago

























 enter open   . more   x remove   / filter   o browser   , settings   ? help
