src/snapshots/ck__ui_tests__home_showing_hidden_sites.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  Sites                                                                                 23 sites

    ◉  Watched         3 threads   2 new
    ◷  History         2 threads recent
    ★  4chan /g/       Technology                                                              1
    ★  lainchan /λ/    Programming                                                             2
    ↺  4chan /a/       Anime & Manga
       4chan            fourchan    https://4chan.org
       lainchan         vichan      https://lainchan.org
       wizchan          vichan      https://wizchan.org                                   hidden
       uboachan         vichan      https://uboachan.net                                  hidden
       endchan          lynxchan    https://endchan.net                                   hidden
       kohlchan         lynxchan    https://kohlchan.net                                  hidden
       desuarchive      foolfuuka   https://desuarchive.org
       zzzchan          jschan      https://zzzchan.xyz                                   hidden
       2ch              makaba      https://2ch.hk                                        hidden
       smuglo.li        vichan      https://smuglo.li                                     hidden
       kissu            vichan      https://kissu.moe                                     hidden
       tvch             vichan      https://tvch.moe                                      hidden
       sushigirl        vichan      https://sushigirl.cafe                                hidden
       leftypol         vichan      https://leftypol.org
       8kun             vichan      https://8kun.top
       alogs            lynxchan    https://alogs.space
       trashchan        jschan      https://trashchan.xyz
       ptchan           jschan      https://ptch.net
       erischan         jschan      https://erischan.org
       junkuchan        jschan      https://junkuchan.org
       nukechan         jschan      https://nukechan.net
       palanq           foolfuuka   https://archive.palanq.win
 enter open   . more   / filter   o browser   r reload   , settings   ? help
