src/snapshots/ck__ui_tests__home_with_favorites.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  Sites                                                                                 23 sites

    ◉  Watched         3 threads   2 new
    ◷  History         2 threads recent
    ★  4chan /g/       Technology                                                              1
    ★  lainchan /λ/    Programming                                                             2
       4chan            fourchan    https://4chan.org
       lainchan         vichan      https://lainchan.org
       wizchan          vichan      https://wizchan.org
       uboachan         vichan      https://uboachan.net
       endchan          lynxchan    https://endchan.net
       kohlchan         lynxchan    https://kohlchan.net
       desuarchive      foolfuuka   https://desuarchive.org
       zzzchan          jschan      https://zzzchan.xyz
       2ch              makaba      https://2ch.hk
       smuglo.li        vichan      https://smuglo.li
       kissu            vichan      https://kissu.moe
       tvch             vichan      https://tvch.moe
       sushigirl        vichan      https://sushigirl.cafe
       leftypol         vichan      https://leftypol.org
       8kun             vichan      https://8kun.top
       alogs            lynxchan    https://alogs.space
       trashchan        jschan      https://trashchan.xyz
       ptchan           jschan      https://ptch.net
       erischan         jschan      https://erischan.org
       junkuchan        jschan      https://junkuchan.org
       nukechan         jschan      https://nukechan.net
       palanq           foolfuuka   https://archive.palanq.win
       b4k              foolfuuka   https://arch.b4k.dev
 enter open   / filter   o browser   r reload   , settings   ? help
