src/snapshots/ck__ui_tests__image_search_panel.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  4chan  ›  /g/  ›  Snapshot thread                                            5 posts  ·  2 new

  ▌
  ▌ Anonymous   OP  2026-09-21 09:13 · 5h ago  No.1000
  ▌ Snapshot thread
  ▌ op.png  800x600 · 121 KB
  ▌ second.jpg  800x600 · 121 KB
  ▌
  ▌ A thread for s  Search for this image        enter open · y copy · esc close
  ▌ It has a few r
  ▌                 op.png
  ▌ Replies  >>100▌   SauceNAO
  ▌                   Google Lens
                      Yandex
                      IQDB
    Anonymous  202  second.jpg
                      SauceNAO
    >>1000 (OP)       Google Lens
    >implying         Yandex
                      IQDB
    Replies  >>100



    Anonymous  2026-09-21 11:13 · 3h ago  No.1002

    Code:
    fn main() {
        println!("snapshot");
 j/k post   enter view image   . more   tab images & links   c conversation…   ? help     1/5  20%
