src/snapshots/ck__ui_tests__images_off_catalog.snap
---
source: src/ui_tests.rs
assertion_line: 1142
expression: snapshot(&mut a)
---
 ck  4chan  ›  /g/  Technology                                             4 threads  ·  images off

                pinned   locked  Welcome to /g/                   3 replies · 0 images · 1y ago
               Read the rules before posting.
    image off


               /lmg/ - Local Models General                    312 replies · 58 images · 5h ago
               Previous threads: >>900 & >>800
    image off


               No.1100                                          12 replies · 0 images · 40m ago
               >be me >write tests



               Rust or C++?                                      45 replies · 3 images · 2d ago
               Which one and why? [spoiler]
    image off









 enter open   f hints   . more   / filter   v view   w watch   s sort   c compact   r reload   , set
