src/snapshots/ck__ui_tests__inside_a_tall_post.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  4chan  ›  /g/  ›  Tall                                               No.3001 (2/4)  ·  3 posts

    line 21                                                                                    ↑
    line 22
    line 23
    line 24
    line 25
    line 26
    line 27
    line 28
    line 29
    line 30
    line 31
    line 32
    line 33
    line 34
    line 35
    line 36
    line 37
    line 38
    line 39
    line 40
    line 41
    line 42
    line 43
    line 44
    line 45
    line 46
    line 47                                                                               ↓ more
 j/k post   tab images & links   f hints   . more   enter quote   c conversation   ? help
