src/snapshots/ck__ui_tests__key_editor_capturing.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  Settings
    Keys                                                                press a key · esc cancel

    Everywhere
  ▌   q               quit             quit                                 Everywhere
      ?               help             help                                 Everywhere, Gallery…
      ,               settings         settings: theme, colors, keys, …     Everywhere
      /               search           filter the list; search a thread     Everywhere
      R               reload           reload                               Everywhere
      o               browser          open in the browser                  Everywhere
      :               goto             go to a URL or site/board/thread     Everywhere
      ]               next_tab         next tab                             Everywhere
      [               prev_tab         previous tab                         Everywhere
      .               menu             everything you can do with what's s… Everywhere, Gallery…
      f               hints            label what's on screen; type a labe… Everywhere
      W               watched          the watched threads                  Everywhere
      ctrl-w          close_tab        close the tab                        Everywhere
      . u             jump_back        back to the thread you left          Everywhere
      . ctrl-r        jump_forward     forward again, after going back      Everywhere

    Lists
      *               favorite         favorite board: on / off             Lists, Catalog
      . B             board_images     images on this board: on / off       Lists, Catalog, Thr…
      . a             add_site         add a site from a link to any page … Lists
      . U             update_boards    read a vichan site's board list aga… Lists


    Press the new key for quit   esc cancels

 enter change   esc back   ? help                                                      24/24  100%
