src/snapshots/ck__ui_tests__link_hints_catalog.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut c)
---
 ck  4chan  ›  /g/  Technology                                                            4 threads

  a  pinned   locked  Welcome to /g/                               3 replies · 0 images · 1y ago
    Read the rules before posting.

  s /lmg/ - Local Models General                                312 replies · 58 images · 5h ago
    Previous threads: >>900 & >>800

  d No.1100                                                      12 replies · 0 images · 40m ago
    >be me >write tests

  f Rust or C++?                                                  45 replies · 3 images · 2d ago
    Which one and why? [spoiler]
















 enter open   f hints   . more   / filter   v view   w watch   s sort   c layout   ? help
